Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <title>nuves</title>
+</head>
+<body>
+    <div class="contenedor">
+        <div class="nuve">
+            <div class="nuve2"></div>
+            <div class=" nuve3"></div>
+            <div class="nuve4"></div>
+        </div>        
+    </div>
+        <form>
+            <div class="foto">
+            </div>
+            <leabel>nombre</leabel>
+            <input type="text">
+            <leabel>contraseña</leabel>
+            <input type="password"><br>
+      <input type="submit" class="btn">
+        </form>
+    <script src="codigo.js"></script>
+</body>
+</html>
 
